# ascii-art

./: CMakeCache.txt  CMakeLists.txt  Makefile  \  ascii  cmake_install.cmake  compile_commands.json  main.cpp
.cache/clangd/index/: main.cpp.7F8EC7ED4D731BFD.idx
